
LibraryScripts = HTMLHelp.tcl labelselectcolor.tcl panedw.tcl fileentry.tcl \
                 labelspinbox.tcl splash.tcl labelcombobox.tcl mainwindow.tcl \
                 BWStdMenuBar.tcl AnimatedHeader.tcl SearchWindow.tcl \
		 EditWindow.tcl DatabaseFunctions.tcl AECFunctions.tcl \
		 PrintFunctions.tcl ImportV1Ascii.tcl ImportV2Ascii.tcl
		 

EXTRA_DIST = $(LibraryScripts) HL3.src

